# jni-example

./: README.md  pom.xml
lib/: libhello.dylib
lib-cpp/: .gitignore  CMakeLists.txt  build.sh
lib-cpp/include/: com_codingapi_jni_HelloWord.h  library.h
lib-cpp/src/: HelloJNI.cpp  library.cpp  main.cpp
scripts/: build.sh
src/main/java/com/codingapi/jni/: HelloWord.java  Main.java
